
	* src/plot2d.c (get_data) src/graphics.c (plot_impulses): Store and use
	optional color info from 3rd column of input for style "impulses".
	Example:
	    plot "foo" using 1:2:(rgb($3)) with impulses lc rgb variable

	* src/plot2d.c (get_data) src/graphics.c (plot_impulses): Store and use
	optional color info from 3rd column of input for style "dots".

2007-01-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (boundary3d): Fix auto-placement of the key if the user
	has forced absolute placement of the plot's right margin.

2007-01-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* plot3d.c (plot3drequest): Deactive splot_map when reading [y1:y2]
	argument of splot. Fixes axis reversal of set view map;splot [] [y1:y2].

2007-01-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Better title for plots with scans forward and
	backward.

2007-01-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/README: Update documentation of image code fallback to using
	term->filled_polygon() for each pixel if term->image() is not usable.

2007-01-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/graph3d.h src/graphics.c src/graphics.h 
	src/plot2d.c src/plot3d.c src/term_api.h:  Define a struct t_image to
	hold properties associated with any particular image.  We can put one
	of these in each 2D or 3D plot structure, just as we do for other
	specific plot types.  This reduces the number of parameters passed
	down to rendering routines; now they only need a pointer to the one
	structure, in which all other relevant information can be found.

	* docs/gnuplot.doc src/misc.c (get_image_options) src/misc.h: Add an
	image property "failsafe".  This causes the image to be rendered with
	generic rgb rectangles, bypassing any terminal-specific image code.
	This is useful for debugging problems in the customized terminal code,
	e.g.  Bug #1612502

2007-01-16  Ethan Merritt  <merritt@u.washington.edu>
